Исправил замечания