@@ -89,10 +89,7 @@ public class CommentServiceImpl implements CommentService {
         UserDto user = userClient.getUser(commentDto.getAuthorId());
 
         if (user == null) {
-            Map<String, String> fieldErrors = new HashMap<>();
-            fieldErrors.put("authorId: %d".formatted(commentDto.getAuthorId()), "There is no user");
-            String message = String.format("Validation failed for comment with ID: %d", commentDto.getId());
-            throw new DataValidationException(message, fieldErrors);
+            throw new DataValidationException(String.format("Validation failed for comment with ID: %d", commentDto.getId()));
         }
 
         return user;
@@ -110,48 +107,31 @@ public class CommentServiceImpl implements CommentService {
 
     private void validateAuthorIdUpdateComment(CommentDto commentDto) {
         if (!(commentDto.getAuthorId() == getComment(commentDto).getAuthorId())) {
-            Map<String, String> fieldErrors = new HashMap<>();
-            fieldErrors.put("authorId: %d".formatted(commentDto.getAuthorId()),
-                    "The request author ID and the comment author ID do not match");
-            throw new DataValidationException("You cannot edit this comment", fieldErrors);
+            throw new DataValidationException("The request author ID and the comment author ID do not match");
         }
     }
 
     private void validatePostIdUpdateComment(CommentDto commentDto) {
         if (!(commentDto.getPostId() == getComment(commentDto).getPost().getId())) {
-            Map<String, String> fieldErrors = new HashMap<>();
-            fieldErrors.put("postId: %d".formatted(commentDto.getPostId()),
-                    "The request post id and the comment post id do not match");
-            throw new DataValidationException("Invalid post id", fieldErrors);
+            throw new DataValidationException("The request post id and the comment post id do not match");
         }
     }
 
     private void validateAuthorNameUpdateComment(CommentDto commentDto) {
         if (!(commentDto.getAuthorName().equals(userClient.getUser(commentDto.getAuthorId()).getUsername()))) {
-            Map<String, String> fieldErrors = new HashMap<>();
-            fieldErrors.put("authorName: %s".formatted(commentDto.getAuthorName()),
-                    "The name of the request author does not match the name of the comment author");
-            String message = String.format("%s are not the author of the comment ", commentDto.getAuthorName());
-            throw new DataValidationException(message, fieldErrors);
+            throw new DataValidationException(String.format("%s are not the author of the comment ", commentDto.getAuthorName()));
         }
     }
 
     private void validateCommentIdUpdateComment(CommentDto commentDto) {
         if (!(commentDto.getId().equals(getComment(commentDto).getId()))) {
-            Map<String, String> fieldErrors = new HashMap<>();
-            fieldErrors.put("commentId: %d".formatted(commentDto.getId()),
-                    "Request comment id does not match comment id");
-            throw new DataValidationException("Comment ids do not match", fieldErrors);
+            throw new DataValidationException("Request comment id does not match comment id");
         }
     }
 
     private void validateAuthorDeleteComment(CommentDto commentDto, Comment comment) {
         if (!(comment.getAuthorId() == commentDto.getAuthorId())) {
-            Map<String, String> fieldErrors = new HashMap<>();
-            fieldErrors.put("authorId: %d".formatted(commentDto.getAuthorId()),
-                    "The request author ID and the comment author ID do not match");
-            String message = String.format("%d this user cannot delete a comment. ", commentDto.getAuthorId());
-            throw new DataValidationException(message, fieldErrors);
+            throw new DataValidationException(String.format("%d this user cannot delete a comment. ", commentDto.getAuthorId()));
         }
     }
 }
